<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Impact">Impact</string>
    <string name="app_name">RedScan for Android</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appintro_antivirus">Antivirus</string>
    <string name="appintro_antivirus_description">Antivirus does not make you more secure, they generally make you much less secure by greatly increasing the attack surface.</string>
    <string name="appintro_issues">Known issues</string>
    <string name="appintro_issues_description">If your device reboots, or a test hangs, the device is likely vulnerable, but our testing cant determine this with certainty.</string>
    <string name="appintro_security">Security</string>
    <string name="appintro_security_description">The security of the device changes overtime, make sure you run periodically scans.</string>
    <string name="appintro_sharing">Sharing</string>
    <string name="appintro_sharing_description">Sharing the tests results will help to increase the knowledge about the android devices that contains security issues.</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cve_date">CVE Date:</string>
    <string name="cvssv2">CVSSV2:</string>
    <string name="define_appintro" />
    <string name="description">Description</string>
    <string name="device_info_abi_list">CPU ABI LIST:</string>
    <string name="device_info_build_brand">Build Brand:</string>
    <string name="device_info_build_fingerprint">Build Fingerprint:</string>
    <string name="device_info_build_id">Build ID:</string>
    <string name="device_info_build_manufacturer">Build Manufacturer:</string>
    <string name="device_info_build_model">Build Model:</string>
    <string name="device_info_build_release">Build Release:</string>
    <string name="device_info_build_sdk">Build SDK:</string>
    <string name="device_info_cpu_abi">CPU ABI:</string>
    <string name="device_info_cpu_abi2">CPU ABI2:</string>
    <string name="device_info_kernel_version">Kernel Version:</string>
    <string name="dialog_automatic_sharing_description">Do you want automatically share the scan results for research purpose? The device information collected does not contains unique identifiers or private information. Nothing related to your Google (or any other) account is collected.</string>
    <string name="dialog_automatic_sharing_title">Sharing scan results</string>
    <string name="dismiss">Dismiss</string>
    <string name="done_button">DONE</string>
    <string name="empty_results">Start the scan to get the results</string>
    <string name="error_exporting_results">Error exporting the results.</string>
    <string name="error_test">"Error running the test:
%s"</string>
    <string name="existing_test_updated">An existing vulnerability test has been updated</string>
    <string name="export_results">Export results</string>
    <string name="global_notsharing">Not sharing</string>
    <string name="global_sharing">Sharing</string>
    <string name="information_not_available">Information not available yet.</string>
    <string name="library_appintro_author">Paolo Rotolo</string>
    <string name="library_appintro_authorWebsite">https://github.com/redscorpiondev/</string>
    <string name="library_appintro_classPath">com.github.paolorotolo.appintro</string>
    <string name="library_appintro_isOpenSource">true</string>
    <string name="library_appintro_libraryDescription">AppIntro is a library for making a cool intro in your Android apps.</string>
    <string name="library_appintro_libraryName">AppIntro</string>
    <string name="library_appintro_libraryVersion">3.2.0</string>
    <string name="library_appintro_libraryWebsite">https://github.com/redscorpiondev</string>
    <string name="library_appintro_licenseId">apache_2_0</string>
    <string name="library_appintro_repositoryLink">https://github.com/redscorpiondev</string>
    <string name="menu_share_results_automatically">Share results automatically</string>
    <string name="more_information">More Information</string>
    <string name="my_device_is_vulnerable_info">Now What?</string>
    <string name="names">Names</string>
    <string name="notification_new_tests">New tests are available</string>
    <string name="patches">Patches</string>
    <string name="run_tests">Please run the tests first</string>
    <string name="scan_details">Scan details</string>
    <string name="scan_details_number_failed_tests">Number of failed tests:</string>
    <string name="scan_details_number_tests">Number of tests:</string>
    <string name="scan_details_secure_message">Your device is secure</string>
    <string name="scan_details_vulnerable_message">Your device is vulnerable</string>
    <string name="share_results_via">Share results via</string>
    <string name="show_details">Show Details</string>
    <string name="skip_button">SKIP</string>
    <string name="splashscreen_description">Android Vulnerability Test Suite</string>
    <string name="start">Start</string>
    <string name="submit_results">Share for Research</string>
    <string name="test_result_failure">Vulnerable</string>
    <string name="test_result_success">Not Vulnerable</string>
</resources>
