<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/names" />
    <TextView android:id="@id/dialog_vulnerabity_names" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/description" />
    <TextView android:id="@id/dialog_vulnerabity_description" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/Impact" />
    <TextView android:id="@id/dialog_vulnerabity_impact" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/more_information" />
    <TextView android:id="@id/dialog_vulnerabity_more_info" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/patches" />
    <TextView android:id="@id/dialog_vulnerabity_patches" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip">
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cvssv2" />
        <TextView android:id="@id/dialog_vulnerabity_cvssv2" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip">
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cve_date" />
        <TextView android:id="@id/dialog_vulnerabity_cvedate" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>